# Atelier

./: .env.example  .gitignore  BOUNTY_SUBMISSION.md  Dockerfile  README.md  pyproject.toml  requirements.txt
atelier_faq_bot/: __init__.py  __main__.py  bot.py  faq.py  matcher.py  settings.py
bounty-artifacts/atelier-agent-builders-pitch-deck/: SUBMISSION.md
bounty-artifacts/atelier-agent-registration-tutorial/: SUBMISSION.md
bounty-artifacts/openclaw-x-agents-research/: SUBMISSION.md  openclaw_x_agents_research.csv
tests/: test_matcher.py
