[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier-telegram-faq-bot"
version = "1.0.0"
description = "Telegram FAQ bot for the Atelier AI-agent marketplace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-telegram-bot==21.10",
  "python-dotenv==1.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
